# data-engineering-bootcamp

./: note
00-bootcamp-project/: load_data_to_bigquery.py  load_data_to_gcs.py  load_data_to_gcs_then_bigquery.py  load_table_from_dataframe.py  load_table_from_dataframe_func.py  pyproject.toml
00-bootcamp-project/dags/: greenery_addresses_data_pipeline.py  greenery_events_data_pipeline.py  greenery_order_items_data_pipeline.py  greenery_orders_data_pipeline.py  greenery_products_data_pipeline.py  greenery_promos_data_pipeline.py  greenery_users_data_pipeline.py  lateral-boulder-384606-7a443bca58fe-bigquery-gcs.json
00-bootcamp-project/scraping/: main_boxofficemojo.py  main_gold.py  main_one2car.py
00-bootcamp-project/scraping/data_scraping/: boxofficemojo_10-05-2023.csv  gold_08-05-2023.csv  one2car.csv
01-introduction-to-data-engineering/workshops/data-engineering-lifecycle/: dogs.json  extract.py  load.sh
02-data-warehouse-and-google-bigquery/examples/loading-data-to-bigquery-from-local/: lateral-boulder-384606-6346d7951129.json  load_table_from_dataframe.py
03-data-lake-with-google-cloud-storage/examples/uploading-to-gcs/: lateral-boulder-384606-abae5d251b0d-gcs.json  main.py  pyproject.toml
04-data-pipelines-with-apache-airflow/dags/: 8_30_tuesdays.py  day_3_at_1800_every_month.py  every_monday.py  every_month.py  everyday.py  my_first_dag.py  play_with_airflow_connections_and_hooks.py  play_with_templating.py
05-analytics-engineering/scheduling-dbt/: Dockerfile
05-analytics-engineering/scheduling-dbt/dags/: greenery_dbt_dag.py
(+16 files in other folders)
